--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #datasource configurations
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/badgeuse
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
